[tool.poetry]
name = "huawei-log-parser"
version = "0.1.0"
description = ""
authors = ["grachevvladislav <vladislav.grachev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "1.40"
streamlit-flow-component = "^1.5.0"
python-dotenv = "^1.0.1"
networkx = {extras = ["default"], version = "^3.4.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
